fixed background, whitespace update and added DIYHue logo

--- a/style.css
+++ b/style.css
@@ -6,7 +6,19 @@ html, body {
   font-family: 'Lato', sans-serif;
   background-image: url("images/diyhue_flask_bg.png");
   background-color: #000;
+  background-repeat: no-repeat;
+  background-size: cover;
   overflow: auto;
+}
+
+.content{
+  width: 100%;
+}
+
+.content .topbar{
+  width: 100%;
+  height: 50px;
+  background-color: rgba(0, 0, 0, .7);
 }
 
 .content h1{
@@ -23,9 +35,8 @@ html, body {
 
 
 .contentContainer{
-  width: 100%;
   background: rgba(0,0,0,0.7);
-  margin: 75px 50px 50px 10px;
+  margin: 50px;
   border-radius: 15px;
   padding: 25px;
   color: #eee;
@@ -143,16 +154,23 @@ html, body {
     text-decoration: underline;
   }
 
-
-
   .sidebar li .fas, .sidebar li .fab{
     color: pink;
     margin-right: 20px;
     font-size: 14pt;
   }
 
+  .sidebar li.iconBox img{
+    height: 25px;
+  }
+
+  .sidebar li.iconBox:hover{
+    background: none;
+  }
+
 .menuToggle{
-  background-color: rgba(0, 0, 0, .7);
+  background: none;
+  height: 50px;
   color: #eee;
   border: none;
   font-size: 17pt;
@@ -161,11 +179,10 @@ html, body {
 }
 
 
-
 .lightGrid{
   background: rgba(0, 0, 0, .5);
   border-radius: 15px;
-  margin: 50px 100px 50px 100px;
+  margin: 50px;
   padding: 40px;
   display: flow-root;
 }
